--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,8 @@
     
     <link href="./web-dist/css/style.css" rel="stylesheet">
     <link href="./web-dist/css/carousel.css" rel="stylesheet">
+    <link rel="stylesheet" href="./web-dist/css/bootstrap.css">
+
   
 
    
