--- a/_includes/train.html
+++ b/_includes/train.html
@@ -2,12 +2,12 @@
     <div class="row">
 
     <div class="container-fluid">
-  <h1 class="text-center mb-3">Bootstrap Multi-Card Carousel</h1>
+  <h1 class="text-center mb-3">Train with us</h1>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner row w-100 mx-auto">
       <div class="carousel-item col-md-4 active">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/f44242/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="./web-dist/img/man-lifting.jpg/800x800/f44242/fff" alt="Card image cap" height= "200">
           <div class="card-body">
             <h4 class="card-title">Card 1</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -15,10 +15,10 @@
           </div>
         </div>
       </div>
-   
+
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/418cf4/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src= ./web-dist/img/intense.jpg/418cf4/fff" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 2</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -90,32 +90,8 @@
     </a>
   </div>
 </div>
-
-
-
-
-
-
-
-
+      
        
-        <div class="col-md-12">
-            <h1>Train with us</h1>
-        </div>
-        <div class="col-sm-12 col-md-6">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
-                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
-            </p>
-        </div>
-        <div class="col-sm-12 col-md-6">
-            <p>
-                Donec elementum orci dui, eu euismod sem pellentesque sit amet. Nunc tempus consequat urna, vel
-                consectetur odio mattis id. Nam nisi sem, tincidunt id risus et, auctor lacinia nulla. In hac habitasse
-                platea dictumst.
-            </p>
-        </div>
-          
     </div>
      <script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
 </section>
