--- a/_includes/train.html
+++ b/_includes/train.html
@@ -7,7 +7,7 @@
     <div class="carousel-inner row w-100 mx-auto">
       <div class="carousel-item col-md-4 active">
         <div class="card">
-          <img class="card-img-top img-fluid" src="./web-dist/img/man-lifting.jpg/800x800/f44242/fff" alt="Card image cap" height= "200">
+          <img class="card-img-top img-fluid" src="./web-dist/img/dynamic.jpg" style="height:250px" alt="Card image cap" >
           <div class="card-body">
             <h4 class="card-title">Card 1</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -18,7 +18,7 @@
 
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src= ./web-dist/img/intense.jpg/418cf4/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="./web-dist/img/man-lifting.jpg" style="height: 250px" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 2</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -93,5 +93,7 @@
       
        
     </div>
+
+
      <script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
 </section>
