--- a/web-dist/css/carousel.css
+++ b/web-dist/css/carousel.css
@@ -1,3 +1,13 @@
+
+
+.card-img-top img{
+  height: 500px;
+}
+
+
+
+
+
 .carousel-inner .active,
   .carousel-inner .active + .carousel-item,
   .carousel-inner .active + .carousel-item + .carousel-item {
