--- a/_includes/train.html
+++ b/_includes/train.html
@@ -7,7 +7,7 @@
     <div class="carousel-inner row w-100 mx-auto">
       <div class="carousel-item col-md-4 active">
         <div class="card">
-          <img class="card-img-top img-fluid" src="/web-dist/img/dynamic.jpg" style="height:250px" alt="Card image cap" >
+          <img class="card-img-top img-fluid" src="/web-dist/img/fitness.jpg" style="height:250px" alt="Card image cap" >
           <div class="card-body">
             <h4 class="card-title">Card 1</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -29,7 +29,7 @@
 
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/3ed846/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="/web-dist/img/1.jpg" style="height: 250px" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 3</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -39,7 +39,7 @@
       </div>
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/42ebf4/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="/web-dist/img/hand-lift.jpg" style= "height:250px" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 4</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -50,7 +50,7 @@
 
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/f49b41/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="/web-dist/img/core-strength-workout.jpg" style="height: 250px" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 5</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -60,7 +60,7 @@
       </div>
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/f4f141/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="/web-dist/img/2.jpg" style="height:250px" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 6</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -70,7 +70,7 @@
       </div>
       <div class="carousel-item col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid" src="http://placehold.it/800x600/8e41f4/fff" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="/web-dist/img/3.jpg" style="height:250px" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card 7</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
