--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
                 <div class="nav-link" data-link=".container-instagram">Portfolio</div>
             </li>
             <li class="nav-item">
-                <div class="nav-link" data-link=".container-contacts">Contacts</div>
+                <div class="nav-link" data-link=".container-contacts">Location</div>
             </li>
         </ul>
     </div>
