--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,16 +8,19 @@
             <h1>About</h1>
         </div>
         <div class="col-sm-12 col-md-6">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
-                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
+            <p>Hercules Fitness..... A well known name in fitness industry, It's a biggest fitness center situated in parel,  we provide all kind of fitness training under one roof ,like crossfit training, ketabell training ,training for Power Yoga, training for weight loss, training for weight gain and many more, we have full loaded weight section, highly advanced machine section, crossfit section, kickboxing section, monkey climbing, steam, massage,shower, lockers. We have all certified trainers. We prepare bodybuilders and fitness models,
+
+            We are launching new massage therapy "Deep Tissue Massage" by certified massures 
+                
+
+
+
+
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                Donec elementum orci dui, eu euismod sem pellentesque sit amet. Nunc tempus consequat urna, vel
-                consectetur odio mattis id. Nam nisi sem, tincidunt id risus et, auctor lacinia nulla. In hac habitasse
-                platea dictumst.
+               
             </p>
         </div>
 
