--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,10 @@
 
 
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <div class="navbar-brand hidden-xs-down navbar-logo" href="/">{{ site.brand }}</div>
+ <div class="navbar-brand hidden-xs-down navbar-logo" href="/">{{ site.brand }}
+      </div>  
+               
+
     <button class="navbar-toggler hidden-sm-up collapsed"
             type="button"
             data-toggle="collapse"
@@ -11,6 +14,7 @@
             aria-label="Toggle navigation">
         &#9776;
     </button>
+      
     <div class="navbar-brand navbar-brand--mobile hidden-sm-up navbar-logo" href="/">{{ site.brand }}</div>
     <div class="collapse navbar-toggleable-xs pull-sm-right" id="CollapsingNavbar">
         <ul class="nav navbar-nav">
@@ -20,9 +24,10 @@
             <li class="nav-item">
                 <div class="nav-link" data-link=".container-about">About</div>
             </li>
-            <li class="nav-item">
+          <!--  <li class="nav-item">
                 <div class="nav-link" data-link=".container-instagram">Portfolio</div>
-            </li>
+            </li> -->
+
             <li class="nav-item">
                 <div class="nav-link" data-link=".container-contacts">Location</div>
             </li>
